--- a/index.html
+++ b/index.html
@@ -5,28 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>week-7-assignment</title>
-    <script type="module" crossorigin src="/week-7-assignment/assets/main-e105bfba.js"></script>
+    <script type="module" crossorigin src="/week-7-assignment/assets/main-09070ae2.js"></script>
     <link rel="stylesheet" href="/week-7-assignment/assets/main-46a35c95.css">
   </head>
   <body>
    <!-- 頁首 -->
 <header class="container">
-  <h1 class="header-title mt-40" data-aos="zoom-in-right">VITO</h1>
-  <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week1/vito.png?raw=true" alt="VITO's headshot" data-aos="zoom-in-down" data-aos-duration="500">
-  <h2 class="header-title w-50 ml-auto pl-3" data-aos="zoom-in-left">RESUME</h2>
+  <h1 class="header-title mt-40" data-aos="zoom-in-right" data-aos-delay="300">VITO</h1>
+  <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week1/vito.png?raw=true" alt="VITO's headshot" data-aos="zoom-in-down" data-aos-delay="300">
+  <h2 class="header-title w-50 ml-auto pl-3" data-aos="zoom-in-left" data-aos-delay="300">RESUME</h2>
 </header>
 
 <!-- 自我介紹區塊 -->
 <div class="self-intro pd-12-0">
   <div class="container">
-    <p class="w-50 ml-auto pl-3" data-aos="zoom-in-left">I'm Vito, a UI Designer with 5+ years of experience. I create visually appealing interfaces for web and mobile apps. Proficient in Sketch, Adobe XD, Figma, HTML, CSS, and JavaScript. I enjoy collaborating with others to create high-quality products.</p>
+    <p class="w-50 ml-auto pl-3" data-aos="zoom-in-left" data-aos-delay="300">I'm Vito, a UI Designer with 5+ years of experience. I create visually appealing interfaces for web and mobile apps. Proficient in Sketch, Adobe XD, Figma, HTML, CSS, and JavaScript. I enjoy collaborating with others to create high-quality products.</p>
   </div>
 </div>
 
 <!-- 個人資訊 -->
 <section class="container">
   <ul class="info-list w-50 pr-3">
-    <li data-aos="zoom-in-right">
+    <li data-aos="zoom-in-right" data-aos-delay="300">
       <h3 class="info-list-item mt-20">Vito Evans</h3>
       <ul>
         <li class="mt-4"><a href="https://www.google.com.tw/maps/" target="_blank">456 Walnut Avenue, Someville, USA</a></li>
@@ -35,7 +35,7 @@
         <li class="mt-2"><a href="www.infohexschool.com" target="_blank">www.infohexschool.com</a></li>
       </ul>
     </li>
-    <li data-aos="zoom-in-right">
+    <li data-aos="zoom-in-right" data-aos-delay="300">
       <h3 class="info-list-item mt-10">Education</h3>
         <ul>
           <li>
@@ -52,7 +52,7 @@
           </li>
         </ul>
     </li>
-    <li data-aos="zoom-in-right">
+    <li data-aos="zoom-in-right" data-aos-delay="300">
       <h3 class="info-list-item mt-10">Work</h3>
         <ul>
           <li>
@@ -69,7 +69,7 @@
           </li>
         </ul>
     </li>
-    <li data-aos="zoom-in-right">
+    <li data-aos="zoom-in-right" data-aos-delay="300">
       <h3 class="info-list-item mt-10">Awards</h3>
         <ul>
           <li class="mt-4">Best in Show Award, National Advertising Awards, 2020</li>
