--- a/pages/index.html
+++ b/pages/index.html
@@ -10,21 +10,21 @@
    <!-- 頁首 -->
 <header class="container">
   <h1 class="header-title mt-40" data-aos="zoom-in-right" data-aos-delay="300">VITO</h1>
-  <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week1/vito.png?raw=true" alt="VITO's headshot" data-aos="zoom-in-down" data-aos-delay="300">
-  <h2 class="header-title w-50 ml-auto pl-3" data-aos="zoom-in-left" data-aos-delay="300">RESUME</h2>
+  <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week1/vito.png?raw=true" alt="VITO's headshot" data-aos="zoom-in-down">
+  <h2 class="header-title w-50 ml-auto pl-3" data-aos="zoom-in-left">RESUME</h2>
 </header>
 
 <!-- 自我介紹區塊 -->
 <div class="self-intro pd-12-0">
   <div class="container">
-    <p class="w-50 ml-auto pl-3" data-aos="zoom-in-left" data-aos-delay="300">I'm Vito, a UI Designer with 5+ years of experience. I create visually appealing interfaces for web and mobile apps. Proficient in Sketch, Adobe XD, Figma, HTML, CSS, and JavaScript. I enjoy collaborating with others to create high-quality products.</p>
+    <p class="w-50 ml-auto pl-3" data-aos="zoom-in-left">I'm Vito, a UI Designer with 5+ years of experience. I create visually appealing interfaces for web and mobile apps. Proficient in Sketch, Adobe XD, Figma, HTML, CSS, and JavaScript. I enjoy collaborating with others to create high-quality products.</p>
   </div>
 </div>
 
 <!-- 個人資訊 -->
 <section class="container">
   <ul class="info-list w-50 pr-3">
-    <li data-aos="zoom-in-right" data-aos-delay="300">
+    <li data-aos="zoom-in-right">
       <h3 class="info-list-item mt-20">Vito Evans</h3>
       <ul>
         <li class="mt-4"><a href="https://www.google.com.tw/maps/" target="_blank">456 Walnut Avenue, Someville, USA</a></li>
@@ -33,7 +33,7 @@
         <li class="mt-2"><a href="www.infohexschool.com" target="_blank">www.infohexschool.com</a></li>
       </ul>
     </li>
-    <li data-aos="zoom-in-right" data-aos-delay="300">
+    <li data-aos="zoom-in-right">
       <h3 class="info-list-item mt-10">Education</h3>
         <ul>
           <li>
@@ -50,7 +50,7 @@
           </li>
         </ul>
     </li>
-    <li data-aos="zoom-in-right" data-aos-delay="300">
+    <li data-aos="zoom-in-right">
       <h3 class="info-list-item mt-10">Work</h3>
         <ul>
           <li>
@@ -67,7 +67,7 @@
           </li>
         </ul>
     </li>
-    <li data-aos="zoom-in-right" data-aos-delay="300">
+    <li data-aos="zoom-in-right">
       <h3 class="info-list-item mt-10">Awards</h3>
         <ul>
           <li class="mt-4">Best in Show Award, National Advertising Awards, 2020</li>
